add blog: portfolio

--- a/devel/public/index.html
+++ b/devel/public/index.html
@@ -329,7 +329,7 @@ Duy Nguyen
                 <div class="row">
                     <div class="col-auto h-100">
                         
-                        <a href="#" class="btn" download
+                        <a href="#" class="btn" ZgotmplZ
 			  >
                             CV (not available yet)
                         </a>
