Edit blog: portfolio

--- a/devel/public/blogs/dev-container/index.html
+++ b/devel/public/blogs/dev-container/index.html
@@ -322,7 +322,7 @@ Custom devcontainer | Duy Nguyen
             <h1 class="text-center mb-4">Custom devcontainer</h1>
             <div class="text-center">
               
-                Duy Nguyen
+                Nguyen Chau Hieu Duy
                 <small>|</small>
               
               Aug 31, 2024
